--- a/Codigo/core/templates/layouts/base.html
+++ b/Codigo/core/templates/layouts/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +12,9 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="#">Vigifia</a>
+          <a class="navbar-brand" href="#">
+            <img src="{% static 'channels-501_logo_fia_gob.svg' %}" alt="fia logo" width="120" height="60">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
