--- a/Codigo/core/templates/boletines.html
+++ b/Codigo/core/templates/boletines.html
@@ -4,27 +4,73 @@
 {% block content %}
 
     <div class="card text-bg-dark">
-        <img src="{% static 'banner-inicio.jpg' %}" class="card-img" alt="..." height="300">
+        <img src="{% static 'images/banner-boletines.jpg' %}" class="card-img" alt="..." height="300" style="object-fit: cover;">
         <div class="card-img-overlay">
-            <h5 class="card-title fs-1">Boletines de Vigilancia e Inteligencia en Innovación</h5>
+            <h5 class="card-title fs-1" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Boletines de Vigilancia e Inteligencia en Innovación</h5>
             <p class="card-text"></p>
             <p class="card-text"><small></small></p>
         </div>
   </div>
-
-    <div class="card mb-3" style="max-width: 900px;">
-        <div class="row g-0">
-        <div class="col-md-2">
-            <img src="{% static 'boletin-prueba.jpg' %}" class="img-fluid rounded-start" alt="...">
-        </div>
-        <div class="col-md-10">
-            <div class="card-body">
-            <h5 class="card-title">Adaptación y Mitigación al Cambio Climático. Boletín de Vigilancia e Inteligencia en Innovación, N°10 septiembre 2024</h5>
-            <p class="card-text"><small class="text-body-secondary">26-sep-2024</small></p>
+    <form class="row p-2  pe-4 ps-4">
+        <h6>Filtrar Búsqueda:</h6>
+        <div class="col-md-4">
+            <div class="input-group mb-3">
+                <label class="input-group-text" for="inputGroupSelect01">Región</label>
+                <select class="form-select" id="inputGroupSelect01">
+                <option selected>Seleccione una región...</option>
+                <option value="1">Metropolitana</option>
+                <option value="2">Valparaiso</option>
+                <option value="3">Ñuble</option>
+                </select>
             </div>
         </div>
+        <div class="col-md-4">
+            <div class="input-group mb-3">
+                <label class="input-group-text" for="inputGroupSelect01">Estación</label>
+                <select class="form-select" id="inputGroupSelect01">
+                <option selected>Seleccione una estación...</option>
+                <option value="1">Verano</option>
+                <option value="2">Otoño</option>
+                <option value="3">Invierno</option>
+                <option value="4">Primavera</option>
+                </select>
+            </div>
         </div>
+        <div class="col-md-3">
+            <div class="input-group mb-3">
+                <label class="input-group-text" for="inputGroupSelect01">Evento</label>
+                <select class="form-select" id="inputGroupSelect01">
+                <option selected>Seleccione un evento...</option>
+                <option value="1">Incendio</option>
+                <option value="2">Sequía</option>
+                <option value="3">Inundación</option>
+                <option value="4">Heladas</option>
+                </select>
+            </div>
+        </div>
+        <div class="col-1">
+            <button class="btn btn-primary" type="submit">Buscar</button>
+        </div>
+    </form>
+    <div class="container p-2">
+        <a href="#" style="text-decoration: none;">
+            <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-1 p-1">
+                            <img src="{% static 'images/boletin-prueba.jpg' %}" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-11">
+                            <div class="card-body">
+                                <h5 class="card-title">Adaptación y Mitigación al Cambio Climático. Boletín de Vigilancia e Inteligencia en Innovación, N°10 septiembre 2024</h5>
+                                <p class="card-text"><small class="text-body-secondary">26-sep-2024</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </a>
     </div>
+
+    
 
 
 {% endblock %}
