--- a/Codigo/core/templates/layouts/base.html
+++ b/Codigo/core/templates/layouts/base.html
@@ -12,16 +12,16 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="{% static 'channels-501_logo_fia_gob.svg' %}" alt="fia logo" width="120" height="60">
+          <a class="navbar-brand" href="{% url 'inicio' %}">
+            <img src="{% static 'images/channels-501_logo_fia_gob.svg' %}" alt="fia logo" width="120" height="60">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              <a class="nav-link" href="#">Boletines</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'inicio' %}">Inicio</a>
+              <a class="nav-link" href="{% url 'boletines' %}">Boletines</a>
             </div>
             <a class="nav-link ms-auto" href="#">Iniciar sesion</a>
           </div>
