se agrega localhost a allowed_hosts

--- a/Codigo/core/templates/layouts/base.html
+++ b/Codigo/core/templates/layouts/base.html
@@ -24,6 +24,7 @@
               <a class="nav-link" href="{% url 'boletines' %}">Boletines</a>
             </div>
             <a class="nav-link ms-auto" href="#">Iniciar sesion</a>
+            <a class="nav-link ms-auto" href="#">Mi perfil</a>
           </div>
         </div>
       </nav>
