vista de panoramas

--- a/Codigo/core/templates/boletines.html
+++ b/Codigo/core/templates/boletines.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     <div class="card text-bg-dark">
-        <img src="{% static 'images/banner-boletines.jpg' %}" class="card-img" alt="..." height="300" style="object-fit: cover;">
+        <img src="{% static 'images/banner-boletines.jpg' %}" class="card-img" alt="..." style="object-fit: cover; max-height: 40vh;">
         <div class="card-img-overlay">
             <h5 class="card-title fs-1" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Boletines de Vigilancia e Inteligencia en Innovación</h5>
             <p class="card-text"></p>
