--- a/Codigo/core/templates/layouts/base.html
+++ b/Codigo/core/templates/layouts/base.html
@@ -21,10 +21,11 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="{% url 'inicio' %}">Inicio</a>
-              <a class="nav-link" href="{% url 'boletines' %}">Boletines</a>
+              <a class="nav-link active" href="{% url 'boletines' %}">Boletines</a>
+              <a class="nav-link active" href="{% url 'panoramas' %}">Panoramas</a>
             </div>
             <a class="nav-link ms-auto" href="#">Iniciar sesion</a>
-            <a class="nav-link ms-auto" href="#">Mi perfil</a>
+            <a class="nav-link ms-auto" href="{% url 'perfil' %}">Mi perfil</a>
           </div>
         </div>
       </nav>
