--- a/Codigo/core/templates/layouts/base.html
+++ b/Codigo/core/templates/layouts/base.html
@@ -24,7 +24,7 @@
               <a class="nav-link active" href="{% url 'boletines' %}">Boletines</a>
               <a class="nav-link active" href="{% url 'panoramas' %}">Panoramas</a>
             </div>
-            <a class="nav-link ms-auto" href="#">Iniciar sesion</a>
+            <a class="nav-link ms-auto" href="{% url 'login' %}">Iniciar sesion</a>
             <a class="nav-link ms-auto" href="{% url 'perfil' %}">Mi perfil</a>
           </div>
         </div>
