--- a/Codigo/core/templates/perfil.html
+++ b/Codigo/core/templates/perfil.html
@@ -6,7 +6,7 @@
 <div class="panel-body inf-content">
     <div class="row pt-5">
         <div class="col-md-2">
-            <img alt=""  title="" class="rounded-circle img-thumbnail isTooltip" src="https://yt3.googleusercontent.com/ZhWPQIkvcnEzXzHwQXunjN8zcetOu1B1O1f7Ng3cDhYUnExJajwowR86o-F_bmqPTNVqL24bXA=s160-c-k-c0x00ffffff-no-rj" data-original-title="Usuario"> 
+            <img alt=""  title="" class="rounded-circle img-thumbnail" src="https://yt3.googleusercontent.com/ZhWPQIkvcnEzXzHwQXunjN8zcetOu1B1O1f7Ng3cDhYUnExJajwowR86o-F_bmqPTNVqL24bXA=s160-c-k-c0x00ffffff-no-rj" data-original-title="Usuario"> 
         </div>
         <div class="col-md-8">
             <strong>Informacion de Usuario</strong><br>
