--- a/Codigo/core/templates/adminView.html
+++ b/Codigo/core/templates/adminView.html
@@ -7,20 +7,33 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h2 class="text-center mb-4">Subir Boletin</h2>
-            <form method="POST">
+            <form method="POST"n enctype="multipart/form-data" id="subirBoletinForm">
+                {% csrf_token %}
+                {{ form.as_p }}
                 <div class="mb-3">
                     <label for="titulo" class="form-label">Titulo</label>
                     <input type="text" class="form-control" id="titulo" name="titulo" required>
                 </div>
                 <div class="">
                     <label class="form-label">Descripcion</label>
-                    <textarea class="form-control" aria-label="With textarea" name="descripcion"></textarea>
+                    <textarea class="form-control" aria-label="With textarea" id="descripcion" name="descripcion"></textarea>
+                  </div>
+                  
+                
+                  <div class="input-group mb-3 pt-3">
+                    <label class="input-group-text" for="inputGroupFile01">Subir PDF</label>
+                    <input type="file" class="form-control" id="archivo_pdf">
+                  </div>
+
+                  <div class="input-group mb-3">
+                    <label class="input-group-text" for="inputGroupFile01">Subir Imagen</label>
+                    <input type="file" class="form-control" id="imagen">
                   </div>
                   <button type="submit" class="btn btn-primary w-100 mt-2">Confirmar</button>
             </form>
-            
+            <div id="responseMessage"></div>
         </div>
     </div>
   </div>
-
+  <script src="{% static 'js/scriptAdminView.js' %}"></script>
 {% endblock %}
