--- a/Codigo/core/templates/boletines.html
+++ b/Codigo/core/templates/boletines.html
@@ -53,22 +53,8 @@
         </div>
     </form>
     <div class="container p-2">
-        <a href="#" style="text-decoration: none;">
-            <div class="card mb-3">
-                    <div class="row g-0">
-                        <div class="col-md-1 p-1">
-                            <img src="{% static 'images/boletin-prueba.jpg' %}" class="img-fluid rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-11">
-                            <div class="card-body">
-                                <h5 class="card-title">Adaptación y Mitigación al Cambio Climático. Boletín de Vigilancia e Inteligencia en Innovación, N°10 septiembre 2024</h5>
-                                <p class="card-text"><small class="text-body-secondary">26-sep-2024</small></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-        </a>
+        <div id="lista-boletines"></div>
     </div>
 
-    <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/scriptBoletines.js' %}"></script>
 {% endblock %}
