Signin - Signup y perfil

--- a/Codigo/core/templates/layouts/base.html
+++ b/Codigo/core/templates/layouts/base.html
@@ -24,8 +24,12 @@
               <a class="nav-link active" href="{% url 'boletines' %}">Boletines</a>
               <a class="nav-link active" href="{% url 'panoramas' %}">Panoramas</a>
             </div>
-            <a class="nav-link ms-auto" href="{% url 'login' %}">Iniciar sesion</a>
+            {% if not user.is_authenticated %}
+            <a class="nav-link ms-auto" href="{% url 'signin' %}">Iniciar sesion</a>
+            {% endif %}
+            {% if user.is_authenticated %}
             <a class="nav-link ms-auto" href="{% url 'perfil' %}">Mi perfil</a>
+            {% endif %}
           </div>
         </div>
       </nav>
