--- a/Codigo/core/templates/boletines.html
+++ b/Codigo/core/templates/boletines.html
@@ -8,7 +8,11 @@
         <div class="card-img-overlay">
             <h5 class="card-title fs-1" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Boletines de Vigilancia e Inteligencia en Innovación</h5>
             <p class="card-text"></p>
-            <p class="card-text"><small></small></p>
+            <p class="card-text">
+                <small class="text-body-1"></small>
+                <small class="text-body-2"></small>
+                <small class="text-body-3"></small>
+            </p>
         </div>
     </div>
     <div class="d-flex justify-content-center align-items-center">
